--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="caixa-principal"></div>
+    <h1 class="titulo">Missão projeto inteligência artificial</h1>
+    <div class="caixa-pergunta"></div>
+    <div class="caixa-alternativa"></div>
+    <p class="texto-resultado"></p>
+</body>
+</html>
