--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="caixa-principal"></div>
-    <h1 class="titulo">Missão projeto inteligência artificial</h1>
-    <div class="caixa-pergunta"></div>
-    <div class="caixa-alternativa"></div>
-    <p class="texto-resultado"></p>
+    <div class="caixa-principal">
+
+        <h1 class="titulo">Missão projeto inteligência artificial</h1>
+        <div class="caixa-pergunta"></div>
+        <div class="caixa-alternativa"></div>
+        <div class="caixa-resultado">
+            <p class="texto-resultado"></p>
+        </div>
+    </div>
+    <script src="scipt.js"></script>
 </body>
 </html>
