--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="caixa-principal">
 
         <h1 class="titulo">Missão projeto inteligência artificial</h1>
-        <div class="caixa-pergunta"></div>
-        <div class="caixa-alternativa"></div>
+        <div class="caixa-perguntas"></div>
+        <div class="caixa-alternativas"></div>
         <div class="caixa-resultado">
             <p class="texto-resultado"></p>
         </div>
