--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <script src="scipt.js"></script>
     <div class="caixa-principal">
 
         <h1 class="titulo">Missão projeto inteligência artificial</h1>
@@ -16,6 +17,6 @@
             <p class="texto-resultado"></p>
         </div>
     </div>
-    <script src="scipt.js"></script>
+    </script>
 </body>
 </html>
