--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <title>Missão Inteligência Artificial</title>
 </head>
 <body>
     <div class="caixa-principal">
-
-        <h1 class="titulo">Missão projeto inteligência artificial</h1>
+       
+        <h1 class="titulo">Missão Projeto Inteligência Artificial</h1>
         <div class="caixa-perguntas"></div>
         <div class="caixa-alternativas"></div>
         <div class="caixa-resultado">
             <p class="texto-resultado"></p>
         </div>
+       
     </div>
-    <script src="scipt.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
